added button funtions to deal button

--- a/BJ.html
+++ b/BJ.html
@@ -7,16 +7,30 @@
     </head>
     <body>
         <div class="mainBox">
-            <div class="box1">Dealer:</div>
-            <div class="box1">Player:</div>
-            <button class="button" id="Deal">Deal</button>
-            <button class="button" id="Hit">Hit</button>
-            <button class="button" id="Stand">Stand</button>
+            <div class="box1">
+                <div id="dealerHand">
+                    <h4>Dealer:</h4>
+                    <!-- <img src="/Users/corcoding/Desktop/Projects!/PRACTICE/Module3/JS/blackjack-exercise/images/2_of_hearts.png"/> -->
+                </div>
+            </div>
 
+            <div class="box1">
+                <div id="playerHand">
+                    <h4>Player:</h4>
+                    <!-- <img src="/Users/corcoding/Desktop/Projects!/PRACTICE/Module3/JS/blackjack-exercise/images/king_of_spades.png"/> -->
+                </div>
+
+
+            </div>
+            <div>
+                <button type="button" id="deal">Deal</button>
+                <button type="button" id="hit">Hit</button>
+                <button type="button" id="stand">Stand</button>
+            </div>    
 
 
         </div>
-    <script href="BJ.js"></script>
+    <script src="BJ.js"></script>
     </body>
 
 </html>
